addressed some issues

--- a/src/arm_description/models/model.config
+++ b/src/arm_description/models/model.config
@@ -6,7 +6,7 @@
     <sdf>model.sdf</sdf>
 
     <author>
-        <name>robi</name>
+        <name>micky</name>
         <email>test@test.com</email>
     </author>
 
