--- a/src/arm_description/package.xml
+++ b/src/arm_description/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="robi@todo.todo">robi</maintainer>
+  <maintainer email="micky@todo.todo">micky</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
